# comet-longterm

./: .gitignore  MANIFEST.in  README.md  changelog  pyinstaller.spec  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml  python-package.yml  windows-app.yml
comet_longterm/: __main__.py  calibrationdialog.py  calibrationdialog.ui  centralwidget.py  centralwidget.ui  charts.py  controller.py  controlswidget.py  controlswidget.ui  dashboard.py  dashboard.ui  logwindow.py  main.py  main.ui  mainwindow.py  processes.py  samples.py  sensor.py  sensorswidget.py  sensorswidget.ui  statuswidget.py  statuswidget.ui  utils.py  worker.py  writers.py
comet_longterm/ui/: dashboard.ui
comet_longterm/view/: centralwidget.py  charts.py  controlswidget.py  dashboard.py  logwindow.py  mainwindow.py  preferencesdialog.py  sensorswidget.py  statuswidget.py
src/longterm_it/: __main__.py  controller.py  driver.py  processes.py  resource.py  sensor.py  utils.py  workers.py  writers.py
src/longterm_it/gui/: charts.py  controlswidget.py  dashboard.py  logwindow.py  mainwindow.py  preferencesdialog.py  sensorswidget.py  statuswidget.py
src/longterm_it/view/: dashboard.py  mainwindow.py
tests/: test_sensor.py  test_utils.py  test_writers.py
tests/sockets/: itc_socket.py  k2410_socket.py  k2700_socket.py  shuntbox_socket.py
