[metadata]
name = comet-longterm
version = attr: comet_longterm.__version__
author = Bernhard Arnold
author_email = bernhard.arnold@oeaw.ac.at
description = Longterm sensor It measurements in climate chamber
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    comet @ git+https://github.com/hephy-dd/comet.git@0.13.1
    PyQt5==5.15.*
    PyQtChart==5.15.*
test_suite = tests

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    comet-longterm = comet_longterm.__main__:main

[flake8]
exclude = env

[mypy]

[mypy-pint.*]
ignore_missing_imports = True

[mypy-comet.*]
ignore_missing_imports = True
