[metadata]
name = comet-longterm
version = attr: longterm_it.__version__
author = Bernhard Arnold
author_email = bernhard.arnold@oeaw.ac.at
description = Longterm sensor It measurements in climate chamber
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3

[options]
python_requires = >=3.9
install_requires =
    comet @ git+https://github.com/hephy-dd/comet.git@0.13.2
    PyVISA==1.14.1
    PyVISA-py==0.7.2
    PyQt5==5.15.10
    PyQtChart==5.15.6
    QCharted==1.1.2
include_package_data = True
test_suite = tests

[options.packages.find]
exclude = tests

[options.package_data]
longterm_it.assets.icons =
    *.ico
    *.svg

[options.entry_points]
console_scripts =
    longterm-it = longterm_it.__main__:main

[flake8]
exclude = env

[mypy]

[mypy-pint.*]
ignore_missing_imports = True

[mypy-comet.*]
ignore_missing_imports = True

[mypy-QCharted.*]
ignore_missing_imports = True
